--- a/index.html
+++ b/index.html
@@ -11,87 +11,77 @@
       <nav>
         <a href="#"><img src="https://via.placeholder.com/150x100" alt="" width="150px" height="100px"></a>
         <ul>
-          <li><a href="#">ИНФОРМАЦИЯ</a></li>
-          <li><a href="#">ФОТО И ВИДЕО</a></li>
-          <li><a href="#">КАРТА ШТАТА</a></li>
-          <li><a href="/hotels.html">ГОСТИНИЦЫ</a></li>
+          <li><a href="#">информация</a></li>
+          <li><a href="#">фото и видео</a></li>
+          <li><a href="#">карта штата</a></li>
+          <li><a href="/hotels.html">гостиницы</a></li>
         </ul>
-        <!-- Картинка Седона -->
-        <img src="https://via.placeholder.com/150x100" alt="" width="150px" height="100px"> 
       </nav>
     </header>
 
     <main>
 
-      <h1>Седона</h1>
+
+      <h1>Туристический портал города Седона</h1>
       <section>
-        <p><b>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p></b>
+        <img src="https://via.placeholder.com/150x100" alt="" width="1200px" height="509px">
+        <!-- здесь будет картинка Седоны через стили, эту удалю -->
+      </section>
+      <section>
+        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
 
       <!-- 1ая причина -->
       <section>
-        <h2>1 причина</h2>
+        <h2>Преимущества города Седона</h2>
         <ul>
           <li>
             <h3>Настоящий городок</h3>
-            <h4>— №1 —</h4>
+            <span>— №1 —</span>
             <p>
               Седона - не аттракцион для туристов, там<br>
               течёт своя жизнь
             </p>
-            <figure>
-              <a href="">
-                <img src="https://via.placeholder.com/150x100" alt="" width="150px" height="100px">
-              </a>
-            </figure>
-          </li>
-          <li>
-            <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
-            <h3>жилье</h3>
-            <p>
-              рекомендуем пожить в настоящем<br>
-              мотеле, все как в кино!
-            </p>
-          </li>
-          <li>
-            <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
-            <h3>еда</h3>
-            <p>
-              всегда заказывайте фирменный бургер,<br>
-              вы не разочаруетесь!
-            </p>
-          </li>
-          <li>
-            <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
-            <h3>сувениры</h3>
-            <p>
-              не только китайского, но и местного<br>
-              производства!
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!-- Остальные 4 причины -->
-      <section>
-        <h2>Остальные 4 причины</h2>
-        <ul>
+
+           <ul>
+            <li>
+              <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
+              <h3>жилье</h3>
+              <p>
+                рекомендуем пожить в настоящем<br>
+                мотеле, все как в кино!
+              </p>
+            </li>
+            <li>
+              <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
+              <h3>еда</h3>
+              <p>
+                всегда заказывайте фирменный бургер,<br>
+                вы не разочаруетесь!
+              </p>
+            </li>
+            <li>
+              <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
+              <h3>сувениры</h3>
+              <p>
+                не только китайского, но и местного<br>
+                производства!
+              </p>
+            </li>
+          </ul>
+          </li> 
           <li>
             <h3>Там есть мост дьявола</h3>
-            <h4>— №2 —</h4>
+            <span>— №2 —</span>
             <p>
               Да, по нему можно пройти! Если конечно<br>
               вы осмелитесь
-            </p>
-            <figure>
-              <a href="">
-                <img src="https://via.placeholder.com/150x100" alt="" width="150px" height="100px">
-              </a>
-            </figure>
+            </p> 
           </li>
           <li>
             <h3>Небольшая площадь</h3>
-            <h4>— №3 —</h4>
+            <span>— №3 —</span>
             <p>
               все достопримечательности<br>
               находятся очень близко
@@ -99,7 +89,7 @@
           </li>
           <li>
             <h3>Красивая дорога</h3>
-            <h4>— №4 —</h4>
+            <span>— №4 —</span>
             <p>
               ехать в седону из лас-вегаса совсем<br>
               не скучно!
@@ -115,40 +105,46 @@
           </li>
         </ul>
       </section>
+
+      <section>
+        <h2>Заинтересовались?</h2>
+        <p>
+          укажите предпологаемые даты поездки,<br>
+          и мы покажем вам лучшие предложения гостиниц в седоне
+        </p>
+        <form>
+          <!-- дальше будет форма поиска гостиницы -->
+          <button type="submit">Найти</button>
+        </form>
+      </section>
+      <section>
+        <img src="https://via.placeholder.com/150x100" alt="" width="1199px" height="473px">
+        <!-- здесь будет карта -->
+      </section>
     </main>
 
     <footer>
-      <section>
+      <div>
         <h2>Как нас найти</h2>
         <p><a href="">#visitSEDONA</a></p>
         <p>ТЕЛ: <a href="">+7(495) 666-01-66</a></p>
                   <!-- здесь будет карты -->
-      </section>
+      </div>
 
-      <section>
+      <div>
         <h2>Давайте дружить</h2>
         <ul>
           <li><a href="">Твиттер</a></li>
           <li><a href="">Фйесбук</a></li>
           <li><a href="">Ютуб</a></li>
         </ul>
-      </section>
+      </div>
 
       <p>
         Разработано:
-        <a href="https://htmlacademy.ru">HTML Academy</a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">HTML Academy</a>
       </p>
     </footer>
-
-    <section>
-      <h2>Заинтересовались?</h2>
-      <p>
-        укажите предпологаемые даты поездки,<br>
-        и мы покажем вам лучшие предложения гостиниц в седоне
-      </p>
-          <!-- дальше будет форма поиска гостиницы -->
-          <button type="button">Найти</button>
-    </section>
 
   </body>
 </html>
