добавил классы и стили

--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="page-body">
 
-    <header>
+    <header class="main-header">
        <!-- Меню -->
-      <nav>
-        <a href="#"><img src="https://via.placeholder.com/150x100" alt="" width="150px" height="100px"></a>
-        <ul>
-          <li><a href="#">информация</a></li>
-          <li><a href="#">фото и видео</a></li>
-          <li><a href="#">карта штата</a></li>
-          <li><a href="/hotels.html">гостиницы</a></li>
+      <a class="main-header-logo" href="#"><img src="https://via.placeholder.com/150x100" alt="" width="150px" height="100px"></a>
+      <nav class="main-nav">
+        <ul class="site-nav">
+          <li class="site-nav-item"><a class="site-nav-link" href="#">информация</a></li>
+          <li class="site-nav-item"><a class="site-nav-link" href="#">фото и видео</a></li>
+          <li class="site-nav-item"><a class="site-nav-link" href="#">карта штата</a></li>
+          <li class="site-nav-item"><a class="site-nav-link" href="/hotels.html">гостиницы</a></li>
         </ul>
       </nav>
     </header>
 
-    <main>
+    <main class="container">
 
 
       <h1>Туристический портал города Седона</h1>
-      <section>
+      <section class="container-img">
         <img src="https://via.placeholder.com/150x100" alt="" width="1200px" height="509px">
         <!-- здесь будет картинка Седоны через стили, эту удалю -->
       </section>
-      <section>
-        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <section class="description">
+        <p class="description-about">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
+        <p class="description-reason">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
 
-      <!-- 1ая причина -->
-      <section>
+      <!-- Преимущества -->
+      <section class="features">
         <h2>Преимущества города Седона</h2>
-        <ul>
-          <li>
+        <ul class="features-list">
+          <li class="features-item-white">
             <h3>Настоящий городок</h3>
             <span>— №1 —</span>
             <p>
@@ -45,7 +48,7 @@
             </p>
 
            <ul>
-            <li>
+            <li class="features-item-black">
               <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
               <h3>жилье</h3>
               <p>
@@ -53,7 +56,7 @@
                 мотеле, все как в кино!
               </p>
             </li>
-            <li>
+            <li class="features-item-black">
               <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
               <h3>еда</h3>
               <p>
@@ -61,7 +64,7 @@
                 вы не разочаруетесь!
               </p>
             </li>
-            <li>
+            <li class="features-item-black">
               <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
               <h3>сувениры</h3>
               <p>
@@ -71,7 +74,7 @@
             </li>
           </ul>
           </li> 
-          <li>
+          <li class="features-item-white">
             <h3>Там есть мост дьявола</h3>
             <span>— №2 —</span>
             <p>
@@ -79,7 +82,7 @@
               вы осмелитесь
             </p> 
           </li>
-          <li>
+          <li class="features-item-black">
             <h3>Небольшая площадь</h3>
             <span>— №3 —</span>
             <p>
@@ -87,7 +90,7 @@
               находятся очень близко
             </p>
           </li>
-          <li>
+          <li class="features-item-black">
             <h3>Красивая дорога</h3>
             <span>— №4 —</span>
             <p>
@@ -95,9 +98,9 @@
               не скучно!
             </p>
           </li>
-          <li>
+          <li class="features-item-black">
             <h3>Мало туристов</h3>
-            <h4>— №5 —</h4>
+            <span>— №5 —</span>
             <p>
               большинство едет в гранд каньон!<br>
               и толпится там
@@ -106,41 +109,41 @@
         </ul>
       </section>
 
-      <section>
+      <section class="form">
         <h2>Заинтересовались?</h2>
         <p>
           укажите предпологаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в седоне
         </p>
-        <form>
+        <form class="search-form">
           <!-- дальше будет форма поиска гостиницы -->
-          <button type="submit">Найти</button>
+          <button class="button" type="submit">Найти</button>
         </form>
       </section>
-      <section>
+      <section class="map">
         <img src="https://via.placeholder.com/150x100" alt="" width="1199px" height="473px">
         <!-- здесь будет карта -->
       </section>
     </main>
 
-    <footer>
-      <div>
+    <footer class="page-footer">
+      <div class="footer-contacts">
         <h2>Как нас найти</h2>
-        <p><a href="">#visitSEDONA</a></p>
-        <p>ТЕЛ: <a href="">+7(495) 666-01-66</a></p>
+        <p class="footer-tag"><a  href="">#visitSEDONA</a></p>
+        <p class="footer-phone">ТЕЛ: <a  href="">+7(495) 666-01-66</a></p>
                   <!-- здесь будет карты -->
       </div>
 
-      <div>
+      <div class="footer-social">
         <h2>Давайте дружить</h2>
         <ul>
-          <li><a href="">Твиттер</a></li>
-          <li><a href="">Фйесбук</a></li>
-          <li><a href="">Ютуб</a></li>
+          <li><a class="twitter" href="">Твиттер</a></li>
+          <li><a class="facebook" href="">Фйесбук</a></li>
+          <li><a class="youtube" href="">Ютуб</a></li>
         </ul>
       </div>
 
-      <p>
+      <p class="footer-copyright">
         Разработано:
         <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">HTML Academy</a>
       </p>
