--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <header class="main-header container">
        <!-- Меню -->
-      <a class="main-header-logo" href="#"><img src="https://via.placeholder.com/150x100" alt="" width="150px" height="100px"></a>
+      <a class="main-header-logo" href="#">
+        <img src="/img/nav-logo.svg" alt="Логотип" width="138" height="70">
+      </a>
       <nav class="main-nav">
         <ul class="site-nav">
           <li class="site-nav-item">
@@ -33,7 +35,7 @@
     <main class="main container">
       <h1>Туристический портал города Седона</h1>
       <section class="banner">
-        <img src="https://via.placeholder.com/1200x509" alt="" width="1200px" height="509px">
+        <img src="/img/header-img.jpg" alt="Седона" width="1200" height="509">
         <!-- здесь будет картинка Седоны через стили, эту удалю -->
       </section>
       <section class="description">
@@ -52,10 +54,10 @@
               Седона - не аттракцион для туристов, там<br>
               течёт своя жизнь
             </p>
-
+            <img src="/img/image-right.jpg" width="800" height="256" alt="Город">
            <ul>
             <li class="features-item-black">
-              <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
+              <img src="/img/house.svg" alt="Жилье" width="75" height="72">
               <h3>жилье</h3>
               <p>
                 рекомендуем пожить в настоящем<br>
@@ -63,7 +65,7 @@
               </p>
             </li>
             <li class="features-item-black">
-              <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
+              <img src="/img/burger.svg" alt="Еда" width="75" height="70">
               <h3>еда</h3>
               <p>
                 всегда заказывайте фирменный бургер,<br>
@@ -71,7 +73,7 @@
               </p>
             </li>
             <li class="features-item-black">
-              <img src="https://via.placeholder.com/150x100" alt="" width="35px" height="35px">
+              <img src="/img/present.svg" alt="Сувениры" width="64" height="77">
               <h3>сувениры</h3>
               <p>
                 не только китайского, но и местного<br>
@@ -86,7 +88,8 @@
             <p>
               Да, по нему можно пройти! Если конечно<br>
               вы осмелитесь
-            </p> 
+            </p>
+            <img src="/img/image-left.jpg" width="800" height="256" alt="Гора"> 
           </li>
           <li class="features-item-black">
             <h3>Небольшая площадь</h3>
