--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-header container">
        <!-- Меню -->
       <a class="main-header-logo" href="#">
-        <img src="/img/nav-logo.svg" alt="Логотип" width="138" height="70">
+        <img src="img/logo.svg" alt="Логотип" width="138" height="70">
       </a>
       <nav class="main-nav">
         <ul class="site-nav">
@@ -26,7 +26,7 @@
             <a class="site-nav-link" href="#">карта штата</a>
           </li>
           <li class="site-nav-item">
-            <a class="site-nav-link" href="/hotels.html">гостиницы</a>
+            <a class="site-nav-link" href="hotels.html">гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -35,7 +35,7 @@
     <main class="main container">
       <h1>Туристический портал города Седона</h1>
       <section class="banner">
-        <img src="/img/header-img.jpg" alt="Седона" width="1200" height="509">
+        <img src="img/header-img.jpg" alt="Седона" width="1200" height="509">
         <!-- здесь будет картинка Седоны через стили, эту удалю -->
       </section>
       <section class="description">
@@ -54,10 +54,10 @@
               Седона - не аттракцион для туристов, там<br>
               течёт своя жизнь
             </p>
-            <img src="/img/image-right.jpg" width="800" height="256" alt="Город">
+            <img src="img/town.jpg" width="800" height="256" alt="Город">
            <ul>
             <li class="features-item-black">
-              <img src="/img/house.svg" alt="Жилье" width="75" height="72">
+              <img src="img/house.svg" alt="Жилье" width="75" height="72">
               <h3>жилье</h3>
               <p>
                 рекомендуем пожить в настоящем<br>
@@ -65,7 +65,7 @@
               </p>
             </li>
             <li class="features-item-black">
-              <img src="/img/burger.svg" alt="Еда" width="75" height="70">
+              <img src="img/burger.svg" alt="Еда" width="75" height="70">
               <h3>еда</h3>
               <p>
                 всегда заказывайте фирменный бургер,<br>
@@ -73,7 +73,7 @@
               </p>
             </li>
             <li class="features-item-black">
-              <img src="/img/present.svg" alt="Сувениры" width="64" height="77">
+              <img src="img/present.svg" alt="Сувениры" width="64" height="77">
               <h3>сувениры</h3>
               <p>
                 не только китайского, но и местного<br>
@@ -89,7 +89,7 @@
               Да, по нему можно пройти! Если конечно<br>
               вы осмелитесь
             </p>
-            <img src="/img/image-left.jpg" width="800" height="256" alt="Гора"> 
+            <img src="img/rocks.jpg" width="800" height="256" alt="Гора"> 
           </li>
           <li class="features-item-black">
             <h3>Небольшая площадь</h3>
@@ -130,8 +130,7 @@
         </form>
       </section>
       <section class="map">
-        <img src="https://via.placeholder.com/1199x473" alt="" width="1199px" height="473px">
-        <!-- здесь будет карта -->
+        <img src="img/map.jpg" alt="" width="1199px" height="473px">
       </section>
     </main>
 
@@ -159,8 +158,10 @@
       </div>
 
       <p class="footer-copyright">
-        Разработано:
-        <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">HTML Academy</a>
+        website by
+        <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
+        <img src="img/logo-htmlacademy.svg" alt="Логотип Академии">
+        </a>
       </p>
     </footer>
 
