--- a/hotels.html
+++ b/hotels.html
@@ -16,22 +16,25 @@
     <a class="main-header-logo" href="index.html">
       <img src="img/logo.svg" alt="Логотип" width="138" height="70">
     </a>
-    <nav class="main-nav">
-      <ul class="site-nav">
-        <li class="site-nav-item">
-          <a class="site-nav-link" href="#">информация</a>
-        </li>
-        <li class="site-nav-item">
-          <a class="site-nav-link" href="#">фото и видео</a>
-        </li>
-        <li class="site-nav-item">
-          <a class="site-nav-link" href="#">карта штата</a>
-        </li>
-        <li class="site-nav-item">
-          <a class="site-nav-link" href="hotels.html">гостиницы</a>
-        </li>
-      </ul>
-    </nav>
+    <div class="main-header-bar">
+      <nav class="main-nav">
+        <ul class="site-nav">
+          <li class="site-nav-item">
+            <a class="site-nav-link" href="#">информация</a>
+          </li>
+          <li class="site-nav-item">
+            <a class="site-nav-link" href="#">фото и видео</a>
+          </li>
+          <li>pf kjujnbgjv</li>
+          <li class="site-nav-item">
+            <a class="site-nav-link" href="#">карта штата</a>
+          </li>
+          <li class="site-nav-item">
+            <a class="site-nav-link" href="/hotels.html">гостиницы</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main class="main container">
