--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
           <li class="site-nav-item">
             <a class="site-nav-link" href="#">фото и видео</a>
           </li>
+          <li>pf kjujnbgjv</li>
           <li class="site-nav-item">
             <a class="site-nav-link" href="#">карта штата</a>
           </li>
           <li class="site-nav-item">
-            <a class="site-nav-link" href="hotels.html">гостиницы</a>
+            <a class="site-nav-link" href="/hotels.html">гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -36,9 +37,9 @@
   </header>
 
   <main class="main container">
-    <h1>Туристический портал города Седона</h1>
+    <!-- <h1>Туристический портал города Седона</h1> -->
     <section class="banner">
-      <img src="img/welcome.svg" alt="Седона" width="457" height="351">
+      <img class="banner-img" src="img/welcome.svg" alt="Седона" width="457" height="351">
     </section>
     <section class="description">
       <p class="description-about">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
@@ -46,7 +47,7 @@
     </section>
 
     <section class="features">
-      <h2>Преимущества города Седона</h2>
+      <!-- <h2>Преимущества города Седона</h2> -->
       <ul class="features-list">
         <li class="features-item-white first">
           <div>
@@ -145,7 +146,7 @@
     </div>
 
     <div class="footer-social">
-      <h2>Давайте дружить</h2>
+      <!-- <h2>Давайте дружить</h2> -->
       <ul class="social-list">
         <li class="social-item">
           <div class="twitter">
