добавил карту через img

--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
         <button class="button button-primary" type="submit">Найти</button>
       </form>
     </section>
-    <section class="map"></section>
+    <section class="map">
+      <img src="img/map.jpg" width="1200" height="437" alt="Карта">
+    </section>
 
   </main>
 
