--- a/index.html
+++ b/index.html
@@ -15,25 +15,22 @@
     <a class="main-header-logo" href="#">
       <img src="img/logo.svg" alt="Логотип" width="138" height="70">
     </a>
-    <div class="main-header-bar">
       <nav class="main-nav">
         <ul class="site-nav">
-          <li class="site-nav-item">
+          <li class="site-nav-item site-nav-item-right">
             <a class="site-nav-link" href="#">информация</a>
           </li>
-          <li class="site-nav-item">
+          <li class="site-nav-item site-nav-item-right">
             <a class="site-nav-link" href="#">фото и видео</a>
           </li>
-          <li class="site-nav-item"></li>
-          <li class="site-nav-item">
+          <li class="site-nav-item site-nav-item-left">
             <a class="site-nav-link" href="#">карта штата</a>
           </li>
-          <li class="site-nav-item">
+          <li class="site-nav-item site-nav-item-left">
             <a class="site-nav-link" href="/hotels.html">гостиницы</a>
           </li>
         </ul>
       </nav>
-    </div>
   </header>
 
   <main class="main container">
@@ -50,7 +47,7 @@
       <h2 class="visually-hidden">Преимущества города Седона</h2>
       <ul class="features-list">
         <li class="features-item-white features-image">
-          <div>
+          <div class="features-item-inner">
             <h3>Настоящий городок</h3>
             <span>— №1 —</span>
             <p>
@@ -88,7 +85,7 @@
         </li>
         <li class="features-item-white features-image-reverse">
           <img src="img/rocks.jpg" width="800" height="256" alt="Гора">
-          <div>
+          <div class="features-item-inner">
             <h3>Там есть мост дьявола</h3>
             <span>— №2 —</span>
             <p>
@@ -97,48 +94,48 @@
             </p>
           </div>
         </li>
-        <li class="features-item-black features-item-black-bottom">
-          <h3>Небольшая площадь</h3>
-          <span>— №3 —</span>
-          <p>
-            все достопримечательности<br>
-            находятся очень близко
-          </p>
-        </li>
-        <li class="features-item-black features-item-black-bottom">
-          <h3>Красивая дорога</h3>
-          <span>— №4 —</span>
-          <p>
-            ехать в седону из лас-вегаса совсем<br>
-            не скучно!
-          </p>
-        </li>
-        <li class="features-item-black features-item-black-bottom">
-          <h3>Мало туристов</h3>
-          <span>— №5 —</span>
-          <p>
-            большинство едет в гранд каньон!<br>
-            и толпится там
-          </p>
+        <li class="features-list">
+          <ul class="city-features-bottom">
+            <li class="features-item-black features-item-black-bottom">
+              <h3>Небольшая площадь</h3>
+              <span>— №3 —</span>
+              <p>
+                все достопримечательности<br>
+                находятся очень близко
+              </p>
+            </li>
+            <li class="features-item-black features-item-black-bottom">
+              <h3>Красивая дорога</h3>
+              <span>— №4 —</span>
+              <p>
+                ехать в седону из лас-вегаса совсем<br>
+                не скучно!
+              </p>
+            </li>
+            <li class="features-item-black features-item-black-bottom">
+              <h3>Мало туристов</h3>
+              <span>— №5 —</span>
+              <p>
+                большинство едет в гранд каньон!<br>
+                и толпится там
+              </p>
+            </li>
+          </ul>
         </li>
       </ul>
     </section>
 
     <section class="form">
-      <div class="form-item">
-        <h2>Заинтересовались?</h2>
-        <p>
-          укажите предпологаемые даты поездки,<br>
-          и мы покажем вам лучшие предложения гостиниц в седоне
-        </p>
-      </div>
+      <h2>Заинтересовались?</h2>
+      <p>
+        укажите предпологаемые даты поездки,<br>
+        и мы покажем вам лучшие предложения гостиниц в седоне
+      </p>
       <form class="search-form">
-        <button class="button button-primary" type="submit">Найти</button>
+        <button class="button button-primary" type="submit">поиск гостиницы в седоне</button>
       </form>
     </section>
-    <section class="map">
-      <img src="img/map.jpg" width="1200" height="437" alt="Карта">
-    </section>
+    <section class="map"></section>
 
   </main>
 
@@ -149,44 +146,36 @@
       <p class="footer-phone">ТЕЛ: <a href="">+7(495) 666-01-66</a></p>
     </div>
 
-    <div class="footer-social">
-      <h2 class="visually-hidden">Давайте дружить</h2>
-      <ul class="social-list">
-        <li class="social-item">
-          <div class="twitter">
-            <a href="#">
-              <svg class="social-item-icon" width="17" height="17" viewBox="0 0 17 17" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M10.95 1.14409C12.635 0.648089 13.934 1.41409 14.527 2.32309C15.2 2.09209 15.858 1.84209 16.538 1.61509C16.5249 2.30145 16.2117 2.94761 15.681 3.38309C16.366 3.55309 16.985 2.89209 16.985 2.89209C16.816 3.89209 15.979 4.68009 15.422 4.91609C15.191 11.6661 12.247 16.1331 5.34498 15.9981H4.89898C4.48898 15.9981 0.734977 15.5381 0.000976562 14.1111C2.27198 14.3071 3.89398 13.6891 4.69398 12.9341C3.73398 12.6341 2.01498 12.4571 1.71498 9.98409C2.06398 10.0901 2.27898 10.2121 2.90498 10.1031C1.70498 9.24709 0.373977 8.53009 0.447977 6.33009C0.732977 6.65809 1.51498 6.86609 1.78798 6.80209C1.08498 6.56109 -0.182023 3.44209 0.893977 1.85009C2.71198 3.70409 4.62898 5.45609 8.04598 5.62309C8.25398 3.33009 9.18298 1.79309 10.95 1.14409Z"
-                  fill="white" />
-              </svg>
-            </a>
-          </div>
-        </li>
-        <li class="social-item">
-          <div class="facebook">
-            <a href="#">
-              <svg class="social-item-icon" width="12" height="22" viewBox="0 0 12 22" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
-              </svg>
-            </a>
-          </div>
-        </li>
-        <li class="social-item">
-          <div class="youtube">
-            <a href="#">
-              <svg class="social-item-icon" width="20" height="16" viewBox="0 0 20 16" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M3 0H17C18.65 0 20 1.35 20 3V13C20 14.65 18.65 16 17 16H3C1.35 16 0 14.65 0 13V3C0 1.35 1.35 0 3 0ZM6.027 4.002V11.998L15.014 8L6.027 4.002Z"
-                  fill="white" />
-              </svg>
-          </div>
-          </a>
-        </li>
-    </div>
+    <h2 class="visually-hidden">Давайте дружить</h2>
+    <ul class="social-list">
+      <li class="social-item">
+        <a class="twitter" href="#">
+          <svg class="social-item-icon" width="17" height="17" viewBox="0 0 17 17" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M10.95 1.14409C12.635 0.648089 13.934 1.41409 14.527 2.32309C15.2 2.09209 15.858 1.84209 16.538 1.61509C16.5249 2.30145 16.2117 2.94761 15.681 3.38309C16.366 3.55309 16.985 2.89209 16.985 2.89209C16.816 3.89209 15.979 4.68009 15.422 4.91609C15.191 11.6661 12.247 16.1331 5.34498 15.9981H4.89898C4.48898 15.9981 0.734977 15.5381 0.000976562 14.1111C2.27198 14.3071 3.89398 13.6891 4.69398 12.9341C3.73398 12.6341 2.01498 12.4571 1.71498 9.98409C2.06398 10.0901 2.27898 10.2121 2.90498 10.1031C1.70498 9.24709 0.373977 8.53009 0.447977 6.33009C0.732977 6.65809 1.51498 6.86609 1.78798 6.80209C1.08498 6.56109 -0.182023 3.44209 0.893977 1.85009C2.71198 3.70409 4.62898 5.45609 8.04598 5.62309C8.25398 3.33009 9.18298 1.79309 10.95 1.14409Z"
+              fill="white" />
+          </svg>
+        </a>
+      </li>
+      <li class="social-item">
+        <a class="facebook" href="#">
+          <svg class="social-item-icon" width="12" height="17" viewBox="0 0 12 22" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
+          </svg>
+        </a>
+      </li>
+      <li class="social-item">
+        <a class="youtube" href="#">
+          <svg class="social-item-icon" width="20" height="16" viewBox="0 0 20 16" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M3 0H17C18.65 0 20 1.35 20 3V13C20 14.65 18.65 16 17 16H3C1.35 16 0 14.65 0 13V3C0 1.35 1.35 0 3 0ZM6.027 4.002V11.998L15.014 8L6.027 4.002Z"
+              fill="white" />
+          </svg>
+        </a>
+      </li>
     </ul>
 
     <div class="footer-copyright">
