flex+toggle отелей

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body class="page-body">
 
   <header class="main-header container">
-    <a class="main-header-logo" href="#">
+    <a class="main-header-logo" href="/index.html">
       <img src="img/logo.svg" alt="Логотип" width="138" height="70">
     </a>
-      <nav class="main-nav">
-        <ul class="site-nav">
-          <li class="site-nav-item site-nav-item-left">
-            <a class="site-nav-link" href="#">информация</a>
-          </li>
-          <li class="site-nav-item site-nav-item-left">
-            <a class="site-nav-link" href="#">фото и видео</a>
-          </li>
-          <li class="site-nav-item site-nav-item-right">
-            <a class="site-nav-link" href="#">карта штата</a>
-          </li>
-          <li class="site-nav-item site-nav-item-right">
-            <a class="site-nav-link" href="/hotels.html">гостиницы</a>
-          </li>
-        </ul>
-      </nav>
+    <nav class="main-nav">
+      <ul class="site-nav">
+        <li class="site-nav-item site-nav-item-left">
+          <a class="site-nav-link" href="#">информация</a>
+        </li>
+        <li class="site-nav-item site-nav-item-left">
+          <a class="site-nav-link" href="#">фото и видео</a>
+        </li>
+        <li class="site-nav-item site-nav-item-right">
+          <a class="site-nav-link" href="#">карта штата</a>
+        </li>
+        <li class="site-nav-item site-nav-item-right">
+          <a class="site-nav-link" href="/hotels.html">гостиницы</a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <main class="main container">
@@ -141,12 +141,11 @@
 
   <footer class="page-footer container">
     <div class="footer-contacts">
-      <h2 class="visually-hidden">Как нас найти</h2>
+      <h2 class="visually-hidden">О нас</h2>
       <p class="footer-tag"><a href="">#visitSEDONA</a></p>
       <p class="footer-phone">ТЕЛ: <a href="">+7(495) 666-01-66</a></p>
     </div>
 
-    <h2 class="visually-hidden">Давайте дружить</h2>
     <ul class="social-list">
       <li class="social-item">
         <a class="twitter" href="#">
