--- a/hotels.html
+++ b/hotels.html
@@ -100,6 +100,9 @@
             </div>
           </div>
         </fieldset>
+        <div class="show-hotels-button">
+        <a href="#">показать</a>
+      </div>
       </form>
     </section>
 
@@ -136,7 +139,7 @@
         </ul>
       </div>
 
-      <div>
+      <div class="search-result">
         <ul class="search-result-list">
           <li class="search-result-item">
             <img src="img/amara-resort.jpg" alt="Амара ресорт">
