--- a/hotels.html
+++ b/hotels.html
@@ -101,8 +101,8 @@
           </div>
         </fieldset>
         <div class="show-hotels-button">
-        <a href="#">показать</a>
-      </div>
+          <a href="#">показать</a>
+        </div>
       </form>
     </section>
 
@@ -143,27 +143,46 @@
         <ul class="search-result-list">
           <li class="search-result-item">
             <img src="img/amara-resort.jpg" alt="Амара ресорт">
-            <h3>amara resort & spa</h3>
-            <span>гостиница</span>
-            <span>от 4000 р.</span>
-            <a class="details" href="#">подробнее</a>
-            <a class="book" href="#">забронировать</a>
+            <div class="search-result-info">
+              <h3>amara resort & spa</h3>
+              <span>гостиница</span>
+              <span>от 4000 р.</span>
+              <a class="details" href="#">подробнее</a>
+              <a class="book" href="#">забронировать</a>
+            </div>
+            <div class="search-result-rating">
+              <span>рейтинг: 8,5</span>
+            </div>
           </li>
           <li class="search-result-item">
-            <img src="img/desert-quail.jpg" alt="Дезерт">
-            <h3>desert quail inn</h3>
-            <span>гостиница</span>
-            <span>от 4000 р.</span>
-            <a class="details" href="#">подробнее</a>
-            <a class="book" href="#">забронировать</a>
+            <div>
+              <img src="img/desert-quail.jpg" alt="Дезерт">
+            </div>
+            <div>
+              <h3>desert quail inn</h3>
+              <span>мотель</span>
+              <span>от 3000 р.</span>
+              <a class="details" href="#">подробнее</a>
+              <a class="book" href="#">забронировать</a>
+            </div>
+            <div class="search-result-rating">
+              <span>рейтинг: 8,9</span>
+            </div>
           </li>
           <li class="search-result-item">
-            <img src="img/villas.jpg" alt="Вилас">
-            <h3>villas at poco diablo</h3>
-            <span>гостиница</span>
-            <span>от 4000 р.</span>
-            <a class="details" href="#">подробнее</a>
-            <a class="book" href="#">забронировать</a>
+            <div>
+              <img src="img/villas.jpg" alt="Вилас">
+            </div>
+            <div>
+              <h3>villas at poco diablo</h3>
+              <span>апартаменты</span>
+              <span>от 2000 р.</span>
+              <a class="details" href="#">подробнее</a>
+              <a class="book" href="#">забронировать</a>
+            </div>
+            <div class="search-result-rating">
+              <span>рейтинг: 9,2</span>
+            </div>
           </li>
         </ul>
       </div>
