--- a/hotels.html
+++ b/hotels.html
@@ -13,7 +13,7 @@
 <body>
 
   <header class="main-header container">
-    <a class="main-header-logo" href="/index.html">
+    <a class="main-header-logo" href="index.html">
       <img src="img/logo.svg" alt="Логотип" width="138" height="70">
     </a>
     <nav class="main-nav">
