--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="page-body">
 
   <header class="main-header container">
-    <a class="main-header-logo" href="/index.html">
+    <a class="main-header-logo" href="index.html">
       <img src="img/logo.svg" alt="Логотип" width="138" height="70">
     </a>
     <nav class="main-nav">
@@ -27,7 +27,7 @@
           <a class="site-nav-link" href="#">карта штата</a>
         </li>
         <li class="site-nav-item site-nav-item-right">
-          <a class="site-nav-link" href="/hotels.html">гостиницы</a>
+          <a class="site-nav-link" href="hotels.html">гостиницы</a>
         </li>
       </ul>
     </nav>
@@ -58,7 +58,7 @@
           <img src="img/town.jpg" width="800" height="256" alt="Город">
           <ul class="city-features">
             <li class="features-item-black">
-              <img class="house" src="img/house.svg" alt="Жилье" width="75" height="72">
+              <img class="features-item-icon" src="img/house.svg" alt="Жилье" width="75" height="72">
               <h3>жилье</h3>
               <p>
                 рекомендуем пожить в настоящем<br>
@@ -66,7 +66,7 @@
               </p>
             </li>
             <li class="features-item-black">
-              <img class="burger" src="img/burger.svg" alt="Еда" width="75" height="70">
+              <img class="features-item-icon" src="img/burger.svg" alt="Еда" width="75" height="70">
               <h3>еда</h3>
               <p>
                 всегда заказывайте фирменный бургер,<br>
@@ -74,7 +74,7 @@
               </p>
             </li>
             <li class="features-item-black">
-              <img class="present" src="img/present.svg" alt="Сувениры" width="64" height="77">
+              <img class="features-item-icon" src="img/present.svg" alt="Сувениры" width="64" height="77">
               <h3>сувениры</h3>
               <p>
                 не только китайского, но и местного<br>
@@ -148,7 +148,7 @@
 
     <ul class="social-list">
       <li class="social-item">
-        <a class="twitter" href="#">
+        <a class="social-link" href="#">
           <svg class="social-item-icon" width="17" height="17" viewBox="0 0 17 17" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path
@@ -158,7 +158,7 @@
         </a>
       </li>
       <li class="social-item">
-        <a class="facebook" href="#">
+        <a class="social-link" href="#">
           <svg class="social-item-icon" width="12" height="17" viewBox="0 0 12 22" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
@@ -166,7 +166,7 @@
         </a>
       </li>
       <li class="social-item">
-        <a class="youtube" href="#">
+        <a class="social-link" href="#">
           <svg class="social-item-icon" width="20" height="16" viewBox="0 0 20 16" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
